bookinfo/1-ingress/api-gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: productpage-route
  namespace: default
spec:
  parentRefs:
  - name: example-gateway
    namespace: default
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - kind: Service
      name: productpage
      namespace: default
      port: 9090
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:  
  name: productpage-route
  namespace: default
spec:  
  from:  
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: default
  to:
  - group: ""
    kind: Service
    name: productpage
